--- a/public/evil-cards/css/main.scss
+++ b/public/evil-cards/css/main.scss
@@ -8,8 +8,8 @@
 //@import url("../fonts/Furore/stylesheet.css");
 //
 ///* Стили компонентов */
-//@import url("../css/components/game-card.css");
-//@import url("../css/components/game-card-evil.css");
+//@import url("../css/components/games-card.css");
+//@import url("../css/components/games-card-evil.css");
 //
 ///*Шрифты*/
 //$font-logo: Furore;
@@ -472,7 +472,7 @@
 //    }
 //}
 //
-//.game-filter {
+//.games-filter {
 //    &__text {
 //        border-radius: 5px;
 //        padding: 5px 10px;
@@ -663,7 +663,7 @@
 //    }
 //}
 //
-//.block-game {
+//.block-games {
 //    label {
 //        width: 100%;
 //    }
@@ -694,7 +694,7 @@
 //    }
 //}
 //
-//.game {
+//.games {
 //    position: relative;
 //    padding: 10px;
 //    margin-bottom: 20px;
@@ -789,7 +789,7 @@
 //    }
 //}
 //
-//.modal-game-help {
+//.modal-games-help {
 //    &__text {
 //        max-height: 70vh;
 //        overflow: auto;
@@ -864,7 +864,7 @@
 //
 ///* ИГРА */
 //
-//.btn-strat-game {
+//.btn-strat-games {
 //    position: absolute;
 //    z-index: 17;
 //    left: 0;
@@ -894,7 +894,7 @@
 //    z-index: 16;
 //}
 //
-//.modal-game-end {
+//.modal-games-end {
 //
 //    h5 {
 //        font-size: 1.4em;
@@ -904,7 +904,7 @@
 //    }
 //}
 //
-//.modal-game-exit {
+//.modal-games-exit {
 //    &__text {
 //        display: flex;
 //        flex-direction: column;
@@ -922,7 +922,7 @@
 //    }
 //}
 //
-//.modal-game-settings__text {
+//.modal-games-settings__text {
 //    margin-left: 40px;
 //    margin-right: 40px;
 //
@@ -1004,7 +1004,7 @@
 //    }
 //}
 //
-//.game-players {
+//.games-players {
 //    display: flex;
 //    flex-direction: column;
 //    // justify-content: space-between;
@@ -1039,7 +1039,7 @@
 //    padding-right: 10px;
 //}
 //
-//.game-chat {
+//.games-chat {
 //    position: absolute;
 //    bottom: 20px;
 //    right: 20px;
