--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,8 @@
 @import 'nullstyle';
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+//@import 'bootstrap/scss/bootstrap';
+@import 'bootstrap';
 
 // Variables
 @import 'variables';
@@ -11,6 +12,6 @@
 @import 'fonts';
 
 // Main css styles
-@import "main";
+@import 'main';
 
 
